versioned_docs/version-2.3.x/1_quick_start.mdx
---
sidebar_position: 1
---

# Quick Start 🔥

import { Header } from '@site/src/components/FirelordJSHeader'

<Header />
<div align="center">
	<i>
		Of The VFQAT
		&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;||&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
		By The VFQAT &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;||
		&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; For The VFQAT
	</i>
</div>
<br />
<div align="center">
	<i>End Firestore Typing Madness With Type Level Madness</i>
</div>
<br />
<div align="center">
	<i>Be The Master Of Your Fire, Be Firelord</i>
</div>
<br />
<div align="center">
	<a href="https://github.com/tylim88/FirelordJS" target="_blank">
		Github
	</a>
</div>
<br />

VFQAT = Victim Of Firestore Quarter Ass Typing

support **[@firebase/rules-unit-testing and emulator](./guides/tests)**

[Release Notes](https://github.com/tylim88/FirelordJS/releases)

Looking for the [Admin version](./firelord/quick_start)?

Upcoming [V3](https://github.com/tylim88/FirelordJS#upcoming-v3)

## Installation

```bash
npm i firebase firelordjs
npm i -D @firebase/rules-unit-testing typescript
```

:::caution

require Typescript 4.8.2+, Firebase 9.9.4+ and @firebase/rules-unit-testing 2+

Always install FirelordJS v2.3.LATEST whenever you read this documentation

:::

:::info

The library size on disk is 300KB, most of the code are type definitions and comments, the runtime code is tiny after minified and gzipped, [see how we got this number](./minified_size).

The documentation is far from finish and will never be because most of contents are just duplication of the official SDK.

We designed this library to look almost identical to the official SDK to lower the learning curve.

So if you cannot find what you want here, high chances it is in the official Firestore [references](https://firebase.google.com/docs/reference/js/firestore_).

Any help wth the documentation is welcomed.

:::

:::tip
Every detail or rule stated in the code below may sound like runtime validation or something you have to memorize, but they are in fact type level validation.

Unless stated explicitly, everything you read is type level validation and you do not need to memorize them.

All IDs, paths, keys, values and returns are narrowly typed. Collection references, document references and data snapshots are recursively typed.
:::

:::note
when dealing with literal type, some time we need to do const assertion.

[v2.3.1](https://github.com/tylim88/FirelordJS/releases/tag/2.3.1) remove most of the need to assert as const (while [v2.3.2](https://github.com/tylim88/FirelordJS/releases/tag/2.3.2) resolved accepting const asserted values issues), however there are still some cases require you to do const asseertion.

Hopefully when TS 5.0 is released, [we no longer need to do const assertion.](https://devblogs.microsoft.com/typescript/announcing-typescript-5-0-beta/#const-type-parameters)
:::

## Typescript Configuration

```json title='tsconfig.json'
{
	// ...other configs
	"compilerOptions": {
		// ...other options
		"strict": true, // compulsory
		"noUncheckedIndexedAccess": true, // compulsory
		"exactOptionalPropertyTypes": true // optional but recommended
	}
}
```

## Define The Meta Type

Meta Type is your single source of truth.

```ts title='dataType.ts'
import { MetaTypeCreator, ServerTimestamp } from 'firelordjs'

export type Example = MetaTypeCreator<
	{
		a: number
		b: { c: boolean; d: { e: string }[] }
		f: { g: ServerTimestamp; h: 1010 | 2929 | 3838 }
	}, // can go with even more crazy looking data type
	'SomeCollectionName', // collection ID type, must be string literal type or else will be replaced by error message
	string // optional, document ID type, default string
>
```

## Create Firelord References

:::tip
After you created the Firelord Ref, you are no longer need to supply collection name to any operation.
:::

```ts title='init.ts'
import { getFirelord, getFirestore } from 'firelordjs'
import { initializeApp } from 'firebase/app'
import { Example } from './define_meta_type'

const app = initializeApp({
	projectId: '### PROJECT ID ###',
})

export const db = getFirestore(app) // or getFirestore()

export const example = getFirelord<Example>(db, 'SomeCollectionName') // this is your firelordRef
```

## Operations

```ts title='operations.ts'
import { example } from './init'
import {
	getDoc,
	setDoc,
	updateDoc,
	deleteDoc,
	addDoc,
	serverTimestamp,
	increment,
	arrayUnion,
} from 'firelordjs'

await setDoc(example.doc('abc'), {
	a: 100,
	b: { c: true, d: [{ e: 'abc' }] },
	f: { g: serverTimestamp(), h: 1010 },
})

await addDoc(example.collection(), {
	a: 900,
	b: { c: false, d: [{ e: 'hi' }] },
	f: { g: serverTimestamp(), h: 3838 },
})

await updateDoc(example.doc('abc'), {
	a: increment(1),
	'b.d': arrayUnion({ e: 'hello' }), // dot notation form
	f: { h: 2929 }, // nested form
})

await deleteDoc(example.doc('abc'))

await getDoc(example.doc('abc')).then(docSnapshot => {
	// everything here is narrowly typed based on MetaType
	docSnapshot.data() // { a: number; b: { c: boolean; d: { e: string; }[]; }; f: { g: Timestamp | null; h: 1010 | 2929 | 3838; }; | undefined
	docSnapshot.exists() // boolean
	docSnapshot.get('b.c') // arguments type is "a" | "b.c" | "b.d" | "f.g" | "f.h"
	docSnapshot.id // string, based on documentId type

	docSnapshot.metadata.fromCache // boolean
	docSnapshot.metadata.hasPendingWrites // boolean
	docSnapshot.metadata.isEqual(docSnapshot) // boolean, can compare with other docSnapshot

	docSnapshot.ref.firestore // firestore instance
	docSnapshot.ref.id // same as docSnapshot.id
	docSnapshot.ref.path // full path of this document, type is `SomeCollectionName/${string}`
	docSnapshot.ref.type // "document"

	// ref.parent is recursively typed
	// parent of document is collection, parent of collection is document
	docSnapshot.ref.parent // in this case, it is collection reference of this document
	docSnapshot.ref.parent.firestore // firestore instance
	docSnapshot.ref.parent.id // collectionId, type is `SomeCollectionName`
	docSnapshot.ref.parent.parent // no more parent for this case, null
	docSnapshot.ref.parent.path // full path of this collection, type is `SomeCollectionName`
	docSnapshot.ref.parent.type // "collection"
})

// in case you want to create auto id doc
await addDoc(example.collection(), {
	a: 900,
	b: { c: false, d: [{ e: 'hi' }] },
	f: { g: serverTimestamp(), h: 3838 },
})
// in case you just want auto id doc ref
const autoIdDocRef = example.doc(example.collection())
```

## Query And OnSnapshot

```ts
import { example } from './init'
import {
	getDocs,
	query,
	where,
	orderBy,
	onSnapshot,
	startAfter,
	limit,
} from 'firelordjs'

// filter documents
getDocs(
	query(
		example.collection(), // also accept example.collectionGroup()
		where('f.h', '>', 1010 as const),
		orderBy('f.h'),
		limit(10)
	)
).then(querySnapshot => {
	querySnapshot.docChanges().forEach((docChange, index) => {
		docChange.doc // return docSnapshot similar to docSnapshot of getDoc
		docChange.type // 'added', 'modified', or 'removed'
		docChange.oldIndex // number
		docChange.newIndex //  number
	})
	querySnapshot.forEach(docSnapshot => {
		// this forEach is not native forEach, it has no index
		// similar to docSnapshot of getDoc
	})
	querySnapshot.docs.forEach((docSnapshot, index) => {
		// similar to docSnapshot of getDoc
	})
})

// filter and listen to documents
const unsub = onSnapshot(
	query(
		example.collectionGroup(), // also accept example.collection()
		where('b.d', 'array-contains', { e: 'hello' }),
		orderBy('f.g'),
		startAfter(new Date())
	),
	querySnapshot => {
		// same as querySnapshot of getDocs
	},
	error => {}, // optional, you can skip this onError callback and move options to here instead
	{ includeMetadataChanges: false } // optional, options
)

// listen to a single document
const unsub2 = onSnapshot(
	example.doc('abc'),
	docSnapshot => {
		// same as documentSnapshot of getDoc
	},
	error => {}, // optional, you can skip this onError callback and move options to here instead
	{ includeMetadataChanges: true } // optional, options
)

// remove listeners
unsub()
unsub2()

// get collection aggregated count
getCountFromServer(example.collection()).then(aggregatedQuerySnapshot => {
	const count = aggregatedQuerySnapshot.data().count
})

// get query aggregated count
getCountFromServer(query(example.collection(), where('a', '>', 1))).then(
	aggregatedQuerySnapshot => {
		const count = aggregatedQuerySnapshot.data().count
	}
)
```

## Batch

```ts title='batch.ts'
import { example, db } from './init'
import { writeBatch, serverTimestamp } from 'firelordjs'

const batch = writeBatch(db) // db argument is optional

batch.set(example.doc('hij'), {
	a: 6,
	b: { c: false, d: [{ e: 'xyz' }] },
	f: { g: serverTimestamp(), h: 1010 },
})

batch.update(example.doc('hij'), {
	a: 6,
	b: { c: false }, // nested form
	'f.g': serverTimestamp(), // dot notation form
})

batch.delete(example.doc('hij'))

await batch.commit()
```

## Transaction

```ts title='transaction.ts'
import { example, db } from './init'
import {
	runTransaction,
	serverTimestamp,
	increment,
	arrayRemove,
} from 'firelordjs'

try {
	const result = await runTransaction(
		db, // db argument is optional, you can skip it
		async transaction => {
			await transaction.get(example.doc('lmn')).then(docSnapshot => {
				const data = docSnapshot.data()
			})

			transaction.set(example.doc('lmn'), {
				a: 88,
				b: { c: false, d: [{ e: 'opq' }] },
				f: { g: serverTimestamp(), h: 2929 },
			})

			transaction.update(example.doc('lmn'), {
				a: increment(1),
				b: { d: arrayRemove({ e: 'rst' }) }, // nested form
				'f.g': serverTimestamp(), // dot notation form
			})

			transaction.delete(example.doc('lmn'))

			return 123 // return this to result
		},
		{ maxAttempts: 10 } // max commit attempt, optional
	)
	console.log(result) // result is 123 because we return 123 in runTransaction callback
} catch (e) {
	console.log('Transaction failed: ', e)
}
```

## You Have Learned Almost Everything In One Page! 🎉

FirelordJS API looks and feels nearly identical to the official Firestore SDK, to the point that in one page, you have learned almost everything, equipped with **full fledged** type safety, effortlessly.

The knowledge gap between casual user and advanced user is only 5% (you can find the rest in [guides](./guides/about.)).

Every value is safely typed, this including collection ID, document ID, all operations, all field paths, all inputs, all outputs, all query clauses, basically whatever FirelordJS exports.

FirelordJS infers types of every single value from the MetaType defined in the very beginning, and this is the only time you ever have to deal with the type, there is no need for type annotation and type casting, **type it and forget**.

This is done elegantly without complicated configuration while maintain API that is nearly identical to the official Firestore API, and simpler.

FirelordJS offer deep type safe mechanisms that are not found in other wrappers: the **Rules Typing**.
